updated buttons and links for buttonsas well as footer links

--- a/app/public/hotRestaurantTables.html
+++ b/app/public/hotRestaurantTables.html
@@ -17,10 +17,10 @@
 
 			  <div class= "text-center">
 			  
-			  <button type="button"  class="btn btn-danger btn-lg" href="hotRestaurantReservations.html" role="button"> <span class="glyphicon glyphicon-credit-card"></span>
-			   Make Reservation</button>
+			  <a href="/reservation"><button type="button"  class="btn btn-danger btn-lg"  role="button"> <span class="glyphicon glyphicon-credit-card"></span>
+			   Make Reservation</button></a>
 
-			   <button type="button" class="btn btn-primary btn-lg" href="hotRestaurantTables.html" role="button"> <span class="glyphicon glyphicon-home"></span> </button>
+			   <a href="/"> <button type="button" class="btn btn-default btn-lg" role="button"> <span class="glyphicon glyphicon-home"></span> </button></a>
 			  </div>
 	</div>
 </div>
@@ -51,6 +51,8 @@
 
 </div>
 
+
+<!-- hyperlinks at the bottom to the left linking to other pages -->
 <footer class="footer">
 	<div class= "container">
 	<p>
@@ -58,11 +60,13 @@
 	<a href="">API Table Link</a>
 	 | 
 	<a href=""> API Wait List</a>
+	 |
+	<a href="">Clear Table</a>
+	
 	</p>
 	</div>
  </footer>
 
-<!-- hyperlinks at the bottom to the left linking to other pages -->
 
 
 </body>
