--- a/app/public/hotRestaurant.html
+++ b/app/public/hotRestaurant.html
@@ -16,23 +16,24 @@
 	  <br>
 
 			  <div class= "text-center">
-			  <button type="button" class="btn btn-primary btn-lg" href="/tables" role="button"> <span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
-			  <button type="button"  class="btn btn-danger btn-lg" href="/reservation" role="button"> <span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button>
+			  <a href="/tables"><button type="button" class="btn btn-primary btn-lg"  role="button"> <span class="glyphicon glyphicon-list-alt"> </span> View Tables </button></a>
+			  <a href="/reservation">
+			  <button type="button"  class="btn btn-danger btn-lg"  role="button"> <span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
 			  </div>
 	</div>
 </div>
-
+<!-- hyperlinks at the bottom to the left linking to other pages -->
 <footer class="footer">
 	<div class= "container">
 	<p>
 	<!-- Need to link the Api tables in the file -->
-	<a href="">API Table Link</a>
+	<a href="hotRestaurantTables.html">API Table Link</a>
 	 | 
 	<a href=""> API Wait List</a>
 	</p>
 	</div>
  </footer>
 
-<!-- hyperlinks at the bottom to the left linking to other pages -->
+
 </body>
 </html>
