--- a/app/public/hotRestaurantReservations.html
+++ b/app/public/hotRestaurantReservations.html
@@ -18,8 +18,9 @@
 	  <br>
 
 			  <div class= "text-center">
-			  <button type="button" class="btn btn-primary btn-lg" href="hotRestaurantTables.html" role="button"> <span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
-			  <button type="button"  class="btn btn-danger btn-lg" href="hotRestaurantReservations.html" role="button"> <span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button>
+			  <a href="/tables"> <button type="button" class="btn btn-primary btn-lg" role="button"> <span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
+			  
+			  <a href="/"> <button type="button" class="btn btn-default btn-lg" role="button"> <span class="glyphicon glyphicon-home"></span> </button></a>
 			  </div>
 	</div>
 </div>
@@ -57,7 +58,7 @@
 						</form>
 						<br>
 						<div class="text-right">
-							<button type="submit" class="btn btn-primary btn-md" id="addBtn"></span><span class="glyphicon glyphicon-fire"></span> Add to the Force</button>
+							<button type="submit" class="btn btn-primary btn-md" id="addBtn"></span>Submit</button>
 						</div>
 					</div>
 				</div>
@@ -94,5 +95,16 @@
 	</script>
 
 <!-- hyperlinks at the bottom to the left linking to other pages -->
+
+<footer class="footer">
+	<div class= "container">
+	<p>
+	<!-- Need to link the Api tables in the file -->
+	<a href="hotRestaurantTables.html">API Table Link</a>
+	 | 
+	<a href=""> API Wait List</a>
+	</p>
+	</div>
+ </footer>
 </body>
 </html>
