added links at bottom

--- a/app/public/hotRestaurant.html
+++ b/app/public/hotRestaurant.html
@@ -27,9 +27,9 @@
 	<div class= "container">
 	<p>
 	<!-- Need to link the Api tables in the file -->
-	<a href="hotRestaurantTables.html">API Table Link</a>
+	<a href="/api">API Table Link</a>
 	 | 
-	<a href=""> API Wait List</a>
+	<a href="/api/wait"> API Wait List</a>
 	</p>
 	</div>
  </footer>
