--- a/app/public/hotRestaurantReservations.html
+++ b/app/public/hotRestaurantReservations.html
@@ -100,9 +100,9 @@
 	<div class= "container">
 	<p>
 	<!-- Need to link the Api tables in the file -->
-	<a href="hotRestaurantTables.html">API Table Link</a>
+	<a href="/api">API Table Link</a>
 	 | 
-	<a href=""> API Wait List</a>
+	<a href="/api/wait"> API Wait List</a>
 	</p>
 	</div>
  </footer>
