--- a/app/public/hotRestaurantTables.html
+++ b/app/public/hotRestaurantTables.html
@@ -92,5 +92,15 @@
 	</script>
 
 
+<footer class="footer">
+	<div class= "container">
+	<p>
+	<!-- Need to link the Api tables in the file -->
+	<a href="/api">API Table Link</a>
+	 | 
+	<a href="/api/wait"> API Wait List</a>
+	</p>
+	</div>
+ </footer>
 </body>
 </html>
